@@ -166,8 +166,6 @@ var resetHandlers = function(self, clearListeners) {
     
   // If we want to clear all the listeners
   if(clearListeners && self.connection != null) {
-    // console.log("------------------------------------------------------")
-    // console.log(self.connection.removeAllListeners.toString())
     var keys = Object.keys(self.eventHandlers);    
     // Remove all listeners
     for(var i = 0; i < keys.length; i++) {
