@@ -106,10 +106,7 @@ var ReplSetServers = exports.ReplSetServers = function(servers, options) {
   // Db Instances
   Object.defineProperty(this, "dbInstances", {enumerable:true
     , get: function() {
-      console.log("-------------------------------------------------------------------------")      
       var servers = this.allServerInstances();
-      console.dir(servers)
-      
       return servers[0].dbInstances;
     }
   })
