@@ -31,6 +31,8 @@ var QueryCommand = require('./commands/query_command').QueryCommand,
  *     to return for every request. This should initially be greater than 1 otherwise
  *     the database will automatically close the cursor. The batch size can be set to 1
  *     with {@link Cursor#batchSize} after performing the initial query to the database.
+ * @param raw {?boolean} Return all query documents as raw buffers (default false)
+ * @param read {?boolean} Specify override of read from source (primary/secondary)
  *
  * @see Cursor#toArray
  * @see Cursor#skip
@@ -40,7 +42,7 @@ var QueryCommand = require('./commands/query_command').QueryCommand,
  * @see Collection#find
  * @see Db#eval
  */
-var Cursor = exports.Cursor = function(db, collection, selector, fields, skip, limit, sort, hint, explain, snapshot, timeout, tailable, batchSize, slaveOk, raw) {
+var Cursor = exports.Cursor = function(db, collection, selector, fields, skip, limit, sort, hint, explain, snapshot, timeout, tailable, batchSize, slaveOk, raw, read) {
   this.db = db;
   this.collection = collection;
   this.selector = selector;
@@ -56,7 +58,8 @@ var Cursor = exports.Cursor = function(db, collection, selector, fields, skip, l
   this.batchSizeValue = batchSize == null ? 0 : batchSize;
   this.slaveOk = slaveOk == null ? collection.slaveOk : slaveOk;
   this.raw = raw == null ? false : raw;
-
+  this.read = read == null ? true : read;
+  
   this.totalNumberOfRecords = 0;
   this.items = [];
   this.cursorId = this.db.bson_serializer.Long.fromInt(0);
@@ -479,7 +482,7 @@ Cursor.prototype.nextObject = function(callback) {
       result = null;
     };
 
-    self.db._executeQueryCommand(cmd, {read:true, raw:self.raw}, commandHandler);
+    self.db._executeQueryCommand(cmd, {read:self.read, raw:self.raw}, commandHandler);
     commandHandler = null;
   } else if(self.items.length) {
     callback(null, self.items.shift());
@@ -513,7 +516,7 @@ Cursor.prototype.getMore = function(callback) {
   try {
     var getMoreCommand = new GetMoreCommand(self.db, self.collectionName, self.limitRequest(), self.cursorId);
     // Execute the command
-    self.db._executeQueryCommand(getMoreCommand, {read:true, raw:self.raw}, function(err, result) {
+    self.db._executeQueryCommand(getMoreCommand, {read:self.read, raw:self.raw}, function(err, result) {
       try {
         if(err != null) callback(err, null);
 
@@ -596,7 +599,7 @@ Cursor.prototype.streamRecords = function(options) {
   execute(queryCommand);
 
   function execute(command) {
-    self.db._executeQueryCommand(command, {read:true, raw:self.raw}, function(err,result) {
+    self.db._executeQueryCommand(command, {read:self.read, raw:self.raw}, function(err,result) {
       if(err) {
         stream.emit('error', err);
         self.close(function(){});
@@ -663,7 +666,7 @@ Cursor.prototype.close = function(callback) {
   if(this.cursorId instanceof self.db.bson_serializer.Long && this.cursorId.greaterThan(self.db.bson_serializer.Long.fromInt(0))) {
     try {
       var command = new KillCursorCommand(this.db, [this.cursorId]);
-      this.db._executeQueryCommand(command, {read:true, raw:self.raw}, null);
+      this.db._executeQueryCommand(command, {read:self.read, raw:self.raw}, null);
     } catch(err) {}
   }
   
